[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ekstra-csi"
version = "0.1.0"
description = "Full-metadata CSI extraction for MediaTek mt76 chipsets on OpenWrt"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Demetri Rodriguez"}]
keywords = ["wifi-sensing", "csi", "mt76", "mediatek", "802.11bf", "openwrt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
processing = ["numpy>=1.21"]
dev = ["numpy>=1.21", "scipy>=1.7", "pytest>=7.0"]

[project.urls]
Repository = "https://github.com/imxdemetri/ekstra-csi"

[project.scripts]
ekstra-csi-daemon = "ekstra_csi.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
